Kubernetes/HomePageV2Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: homepage-ui
  name: homepage-ui
  namespace: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 3
  selector:
    matchLabels:
      run: homepage-ui
  template:
    metadata:
      labels:
        run: homepage-ui
    spec:
      containers:
        - name: homepage-ui
          image: ninepiece2/homepage:ui
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-api
  namespace: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 3
  selector:
    matchLabels:
      app: homepage-api
  template:
    metadata:
      labels:
        app: homepage-api
    spec:
      containers:
        - name: homepage-api
          image: ninepiece2/homepage:api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
---

apiVersion: v1
kind: Service
metadata:
  name: homepage-ui-service
  namespace: homepage
spec:
  selector:
    run: homepage-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: homepage
spec:
  ingressClassName: haproxy
  rules:
    - host: romitsagu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-ui-service
                port:
                  number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: homepage-api-service
  namespace: homepage
spec:
  selector:
    app: homepage-api
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
